--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: Lua CI
+name: Lint and format
 
 on: [push, pull_request]
 
@@ -24,15 +24,3 @@ jobs:
 
       - name: Run GLuaFixer
         run: ./glualint --output-format github --config .glualint.json lint lua
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: [lint]
-    if: ${{ format('refs/heads/{0}', github.event.repository.default_branch) == github.ref }}
-
-    environment: production
-    concurrency: production
-
-    steps:
-      - name: Post to webhook
-        run: curl --fail-with-body -X POST ${{ secrets.DEPLOYER_WEBHOOK }}/${{ github.event.repository.name }}
