--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,8 +5,12 @@ on:
     branches: master
 
 jobs:
+  lint:
+    uses: "./.github/workflows/lint.yml"
+
   deploy:
     runs-on: ubuntu-latest
+    needs: lint
 
     environment: production
     concurrency: production
