Remove debug job and fix dedupe condition

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -6,12 +6,4 @@ jobs:
   lint:
     uses: "./.github/workflows/lint.yml"
     # Only run on forks to avoid duplicating the "push" workflow
-    # if: ${{ github.event.pull_request.base.repo.fork }}
-
-  debug:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo ${{ github.event.pull_request.base.repo.fork }}
-      - run: echo ${{ github.event.pull_request.base.ref }}
-      - run: echo ${{ github.event.pull_request.head.repo.fork }}
-      - run: echo ${{ github.event.pull_request.head.ref }}
+    if: ${{ github.event.pull_request.head.repo.fork }}
