--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,6 +13,8 @@ jobs:
 
       - run: ls -la
 
+      - run: git log
+
       - uses: JohnnyMorganz/stylua-action@v2
         with:
           token: ${{ github.token }}
