--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,6 +10,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 5
+
+      - run: git log
 
       - uses: JohnnyMorganz/stylua-action@v2
         with:
